# mkmp

./: .gitignore  CMakeLists.txt  readme.md
include/: OutputManager.hpp  PointManager.hpp  helper.hpp  mkmp.hpp
src/: CMakeLists.txt  InputBase.cpp  InputBase.hpp  InputText.cpp  InputText.hpp  OutputManager.hpp  PointManager.cpp  PointManager.hpp  main.cpp  mkmp.cpp  mkmp.hpp  outputManager.cpp
test/: CMakeLists.txt  a.out  ut_InputText  ut_InputText.cpp  ut_PointManager.cpp
test/ut_PointManager/: 1D.csv  2D.csv  3DIncorrectDims.csv  CMakeLists.txt  commentsEmptyLines.csv  nan.csv  ut_PointManager.cpp
